--- a/homework12/src/main/resources/web/cache.html
+++ b/homework12/src/main/resources/web/cache.html
@@ -5,15 +5,15 @@
 	<h1>Cache Usage</h1>
 	<div>
 		<label for="totalcount">Total Count</label>
-		<input type='text' name='totalcount' readonly value="totalvalue"/>
+		<input type='text' name='totalcount' readonly value="${result.totalValue}"/>
 	</div>
 	<div>
 		<label for="hitcount">Hit</label>
-		<input type='text' name='hitcount' readonly value="hitvalue"/>
+		<input type='text' name='hitcount' readonly value="${result.hitValue}"/>
 	</div>
 	<div>
 		<label for="misscount">Miss</label>
-		<input type='text' name='misscount' readonly value="missvalue"/>
+		<input type='text' name='misscount' readonly value="${result.missValue}"/>
 	</div>
 </body>
 </html>
