--- a/homework15/src/main/resources/web/cache.html
+++ b/homework15/src/main/resources/web/cache.html
@@ -23,6 +23,7 @@
         </div>
 
     </div>
+    <input type="hidden" id="context" name="context" value="${context}"/>
     <script src="resources/js/wschat.js" type="text/javascript"></script>
 </body>
 
